# engram

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  leaderboard-submission.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: PHASE_6_FULL_500_REPORT.md  PHASE_6_REPORT.md  cache.py  judge.py  longmemeval_v2.py  phase_6_full_500.json  phase_6_results.json  smoke_runner.py
benchmarks/reports/: smoke_1777528059_gpt-4o-mini.md  smoke_1777528140_gpt-4o-mini.md  smoke_1777528143_claude-haiku-4-5-20251001.md  smoke_1777528147_claude-sonnet-4-6.md  smoke_1777536897_gpt-4o-mini.md  smoke_1777536902_gpt-4o-mini.md  smoke_1777537643_gpt-4o-mini.md  smoke_1777537790_gpt-4o-mini.md  smoke_1777537793_gpt-4o-mini.md  smoke_1777542683_gpt-4o-mini.md  smoke_1777545388_gpt-4o-mini_d_n100.md  smoke_1777547421_gpt-4o-mini_dt_n100.md  smoke_1777547424_gpt-4o-mini_dx_n50.md  smoke_1777547427_gpt-4o-mini_dc_n50.md  smoke_1777555861_claude-haiku-4-5-20251001_dt_n100.md  smoke_1777555862_claude-sonnet-4-6_dt_n100.md  smoke_1777562793_gpt-4o-mini_dtr_n100.md  smoke_1777562795_gpt-4o-mini_dtf_n100.md
docs/: quickstart.md
examples/: 01_quickstart.py  02_extraction_with_ollama.py  03_http_server.py  04_two_stage_with_classifier.py  05_preference_synthesis.py  06_with_jamjet.py
src/engram/: __init__.py  cli.py  engram.py  errors.py  models.py  scope.py
tests/: conftest.py
tests/integration/: test_context_decomposed.py  test_engram_facade.py  test_http.py  test_http_mcp.py  test_mcp.py  test_react_e2e.py  test_reader_with_tools.py  test_reextract_in_reader.py  test_v1_rest_unaffected.py
tests/property/: test_store_props.py
tests/unit/: test_auth.py  test_bench_cache.py  test_classify.py  test_cli.py  test_decomposer_wiring.py  test_embedding.py  test_engram_context_role_filter.py  test_engram_init_exports.py  test_engram_record_role.py  test_events.py  test_extract.py  test_judge.py  test_llm.py  test_model_tier.py  test_models.py  test_preference_gate.py  test_prompts.py  test_react.py  test_read.py  test_reader_synthesis_mode.py  test_reextract.py  test_rerank.py  test_retrieve.py  test_scope.py  test_self_consistency.py  test_smoke_runner.py  test_sqlite_store.py  test_temporal.py  test_temporal_solver.py  test_tools.py  test_transport.py  (+3 more)
(+66 files in other folders)
