[project]
name = "jamjet-engram"
version = "0.1.0a0"
description = "Engram — durable memory layer for AI agents. Temporal knowledge graph, semantic search, and MCP-native tools."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sunil Prakash", email = "sunil@jamjet.dev" },
]
keywords = ["agent", "memory", "knowledge-graph", "mcp", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.7,<3",
    "aiosqlite>=0.20",
    "anyio>=4.4",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "hnswlib>=0.8.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "mcp>=1.27.0",
    "python-dateutil>=2.9.0.post0",
    "openai>=2.33.0",
    "anthropic>=0.97.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "hypothesis>=6.110",
]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
]
rerank = [
    "sentence-transformers>=3",
]

[project.urls]
Homepage = "https://jamjet.dev/engram"
Repository = "https://github.com/jamjet-labs/engram"
Documentation = "https://docs.jamjet.dev/engram/v2/"
Issues = "https://github.com/jamjet-labs/engram/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.hatch.build.targets.wheel.force-include]
"src/engram/store/schema.sql" = "engram/store/schema.sql"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "ASYNC",
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src/engram"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20260408",
]
